# UE4SS-Lite

./: .gitignore  README.md  deploy_to_drg.bat  xmake.lua
DotNet/: README.md  UE4SSL.DotNet.sln
DotNet/UE4SSL.DumpTool/: Inspector.cs  UE4SSL.DumpTool.csproj
DotNet/UE4SSL.DumpTool/UnrealSharp/: UnrealEngine.cs
DotNet/UE4SSL.Framework/Framework/: Bindings.cs  FString.cs  Framework.cs  Hotkeys.cs  Utils.cs
DotNet/UE4SSL.Inspector/: Inspector.cs
DotNet/UE4SSL.Inspector/Dumper/: DebugInfo.cs  SDK.cs
DotNet/UE4SSL.Inspector/UnrealSharp/: UnrealEngine.cs
DotNet/UE4SSL.Runtime/: UE4SSL.Runtime.csproj
DotNet/UE4SSL.Runtime/Plugins/: PlatformInformation.cs  PluginConfig.cs  PluginLoader.cs  PluginReloadedEventArgs.cs
DotNet/UE4SSL.Runtime/Runtime/: Runtime.cs
DotNet/UE4SSL.Test/: FSD.cs  Object.cs  Program.cs  UE4SSL.Test.csproj
Script/: xmake.lua
Script/CSharp/: xmake.lua
Script/JavaScript/: README.md  build.bat  xmake.lua
UE4SS/: xmake.lua
UE4SS/include/: SettingsManager.hpp  UE4SSProgram.hpp
UE4SS/src/: SettingsManager.cpp  UE4SSProgram.cpp
UE4SSL/: xmake.lua
UE4SSL/generated_include/: MacroSetter.hpp
UE4SSL/include/: Common.hpp  UE4SSProgram.hpp  UnrealDef.hpp
UE4SSL/proxy_generator/: main.cpp
UE4SSL/src/: SettingsManager.cpp  UE4SSProgram.cpp
assets/Mods/: mods.json  mods.txt
cppmods/: CMakeLists.txt  xmake.lua
cppmods/JSScriptMod/: CMakeLists.txt  README.md  xmake.lua
cppmods/JSScriptMod/include/: JSMod.hpp
cppmods/JSScriptMod/src/: JSMod.cpp  dllmain.cpp
cppmods/JSScriptMod/src/JSType/: JSUObject.cpp
(+34 files in other folders)
